sumo/tests/netconvert/errors/unknown_option/output.netconvert
SUMO netconvert Version dev-SVN-r4158
 (c) DLR/ZAIK 2000-2007; http://sumo.sourceforge.net
 Use --help to get the list of options.
